--- a/style.css
+++ b/style.css
@@ -1,48 +1,78 @@
-#Map iframe
-{
+#Map iframe {
     width: 50%;
     float: left;
     padding-top: 5px;
 }
 
-.contact_1 h3
-{
+.contact_1 h3 {
     display: inline;
 }
-.contact_1 a
-{
+
+.contact_1 a {
     text-shadow: none;
 }
-#footer{
-  height: 20px;
-  background-color:white;
-  }
 
-input
-{
+#footer {
+    height: 20px;
+    background-color: white;
+}
+
+input {
     background: grey
 }
 
-.announcement{
-background-color:#337ab7;
-width: 100%;
-height: 30px;
+.announcement {
+    background-color: #337ab7;
+    width: 100%;
+    height: 30px;
 }
 
-#marqueeStyle{
-  width:100%;
-  direction:right;
-  height:100px;
-  color: beige;
-  font-size:120%;
+#marqueeStyle {
+    width: 100%;
+    direction: right;
+    height: 100px;
+    color: beige;
+    font-size: 120%;
 }
 
-.video{
-  width:100%;
-  height:500px;
-  border: none;
+.video {
+    width: 100%;
+    height: 500px;
+    border: none;
 }
+
 iframe {
-    text-align:center;
+    text-align: center;
     margin-left: 50px;
+}
+
+</div > .row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.travel_mainDiv {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    border: 1px solid #c7c7c7;
+}
+
+.travel_mainDiv img {
+    width: 100%;
+    height: 300px;
+}
+
+.travel_mainDiv hr {
+    width: 100%;
+}
+
+.travel_mainDiv h5,
+.travel_mainDiv p {
+    margin-left: 20px;
+}
+
+#achievementsID {
+    padding-bottom: 10px;
 }
